--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Хапибёздый</title>
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="menuList hidden nonexistent">
@@ -25,14 +25,24 @@
     </div>
 
     <div class="mainImg">
+      <!-- loaderArea -->
+      <div class="loaderWraper nonexistent">
+        <figure class="loader ">
+          <div class="dot white"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </figure>
+      </div>
+      <!-- loaderArea -->
       <img
         class="img"
         src="./img/imgonline-com-ua-Resize-dHSD8AyZcI.jpg"
         alt=""
       />
     </div>
-  </body> 
+  </body>
 </html>
-
 
 <!-- https://static.insales-cdn.com/images/products/1/8081/449429393/220311.jpg -->
